--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "examples/LKMPG"]
 	path = examples/LKMPG
-	url = https://github.com/bashrc/LKMPG.git
+	url = https://code.freedombone.net/bashrc/LKMPG.git
